src/main/gen/swarm/intellij/language/parser/SwarmParser.java
// This is a generated file. Not intended for manual editing.
package swarm.intellij.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static swarm.intellij.language.psi.SwarmTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SwarmParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Swarm(b, l + 1);
  }

  /* ********************************************************** */
  // statements*
  static boolean Swarm(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Swarm")) return false;
    while (true) {
      int c = current_position_(b);
      if (!statements(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Swarm", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // PARENTHESIS_L [CHOOSE] expr PARENTHESIS_R | field_mark | function_call | value
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = atom_0(b, l + 1);
    if (!r) r = field_mark(b, l + 1);
    if (!r) r = function_call(b, l + 1);
    if (!r) r = value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // PARENTHESIS_L [CHOOSE] expr PARENTHESIS_R
  private static boolean atom_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENTHESIS_L);
    r = r && atom_0_1(b, l + 1);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, PARENTHESIS_R);
    exit_section_(b, m, null, r);
    return r;
  }

  // [CHOOSE]
  private static boolean atom_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0_1")) return false;
    consumeToken(b, CHOOSE);
    return true;
  }

  /* ********************************************************** */
  // CHARACTER | esc
  static boolean char_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "char_$")) return false;
    boolean r;
    r = consumeToken(b, CHARACTER);
    if (!r) r = esc(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // REGEX_RANGE
  public static boolean charset(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "charset")) return false;
    if (!nextTokenIs(b, REGEX_RANGE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, REGEX_RANGE);
    exit_section_(b, m, CHARSET, r);
    return r;
  }

  /* ********************************************************** */
  // KW_CLASS modifiers identifier [rule_type] rule_body
  public static boolean class_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_statement")) return false;
    if (!nextTokenIs(b, KW_CLASS)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_STATEMENT, null);
    r = consumeToken(b, KW_CLASS);
    r = r && modifiers(b, l + 1);
    r = r && identifier(b, l + 1);
    p = r; // pin = identifier
    r = r && report_error_(b, class_statement_3(b, l + 1));
    r = p && rule_body(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [rule_type]
  private static boolean class_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_statement_3")) return false;
    rule_type(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // BRACE_L cmd_statement* BRACE_R
  public static boolean cmd_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_block")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_L);
    r = r && cmd_block_1(b, l + 1);
    r = r && consumeToken(b, BRACE_R);
    exit_section_(b, m, CMD_BLOCK, r);
    return r;
  }

  // cmd_statement*
  private static boolean cmd_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!cmd_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "cmd_block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // namespace [EQ|COLON] cmd_value
  public static boolean cmd_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_pair")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespace(b, l + 1);
    r = r && cmd_pair_1(b, l + 1);
    r = r && cmd_value(b, l + 1);
    exit_section_(b, m, CMD_PAIR, r);
    return r;
  }

  // [EQ|COLON]
  private static boolean cmd_pair_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_pair_1")) return false;
    cmd_pair_1_0(b, l + 1);
    return true;
  }

  // EQ|COLON
  private static boolean cmd_pair_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_pair_1_0")) return false;
    boolean r;
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // cmd_pair
  //     | cmd_string
  //     | function_call
  //     | SEMICOLON
  //     | COMMA
  public static boolean cmd_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CMD_STATEMENT, "<cmd statement>");
    r = cmd_pair(b, l + 1);
    if (!r) r = cmd_string(b, l + 1);
    if (!r) r = function_call(b, l + 1);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, COMMA);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // namespace LINE_ARG
  public static boolean cmd_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_string")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespace(b, l + 1);
    r = r && consumeToken(b, LINE_ARG);
    exit_section_(b, m, CMD_STRING, r);
    return r;
  }

  /* ********************************************************** */
  // BOOLEAN | num | string_literal | cmd_block
  public static boolean cmd_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CMD_VALUE, "<cmd value>");
    r = consumeToken(b, BOOLEAN);
    if (!r) r = num(b, l + 1);
    if (!r) r = string_literal(b, l + 1);
    if (!r) r = cmd_block(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // COMMENT_LINE | COMMENT_BLOCK | COMMENT_DOC
  static boolean comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment")) return false;
    boolean r;
    r = consumeToken(b, COMMENT_LINE);
    if (!r) r = consumeToken(b, COMMENT_BLOCK);
    if (!r) r = consumeToken(b, COMMENT_DOC);
    return r;
  }

  /* ********************************************************** */
  // identifier [COLON rule_type] [EQ expr]
  public static boolean define_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_pair")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && define_pair_1(b, l + 1);
    r = r && define_pair_2(b, l + 1);
    exit_section_(b, m, DEFINE_PAIR, r);
    return r;
  }

  // [COLON rule_type]
  private static boolean define_pair_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_pair_1")) return false;
    define_pair_1_0(b, l + 1);
    return true;
  }

  // COLON rule_type
  private static boolean define_pair_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_pair_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && rule_type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [EQ expr]
  private static boolean define_pair_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_pair_2")) return false;
    define_pair_2_0(b, l + 1);
    return true;
  }

  // EQ expr
  private static boolean define_pair_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_pair_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQ);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PARENTHESIS_L [define_pair (COMMA define_pair)* COMMA?] PARENTHESIS_R
  public static boolean define_parameters(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_parameters")) return false;
    if (!nextTokenIs(b, PARENTHESIS_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENTHESIS_L);
    r = r && define_parameters_1(b, l + 1);
    r = r && consumeToken(b, PARENTHESIS_R);
    exit_section_(b, m, DEFINE_PARAMETERS, r);
    return r;
  }

  // [define_pair (COMMA define_pair)* COMMA?]
  private static boolean define_parameters_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_parameters_1")) return false;
    define_parameters_1_0(b, l + 1);
    return true;
  }

  // define_pair (COMMA define_pair)* COMMA?
  private static boolean define_parameters_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_parameters_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = define_pair(b, l + 1);
    r = r && define_parameters_1_0_1(b, l + 1);
    r = r && define_parameters_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA define_pair)*
  private static boolean define_parameters_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_parameters_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!define_parameters_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "define_parameters_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA define_pair
  private static boolean define_parameters_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_parameters_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && define_pair(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean define_parameters_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_parameters_1_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // KW_DEFINE modifiers namespace [define_parameters] cmd_block
  public static boolean define_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_statement")) return false;
    if (!nextTokenIs(b, KW_DEFINE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFINE_STATEMENT, null);
    r = consumeToken(b, KW_DEFINE);
    r = r && modifiers(b, l + 1);
    r = r && namespace(b, l + 1);
    p = r; // pin = namespace
    r = r && report_error_(b, define_statement_3(b, l + 1));
    r = p && cmd_block(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [define_parameters]
  private static boolean define_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_statement_3")) return false;
    define_parameters(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // EQ | COLON
  static boolean eq(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eq")) return false;
    if (!nextTokenIs(b, "", COLON, EQ)) return false;
    boolean r;
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // ESCAPE_UNICODE | ESCAPE_SPECIAL
  static boolean esc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "esc")) return false;
    if (!nextTokenIs(b, "", ESCAPE_SPECIAL, ESCAPE_UNICODE)) return false;
    boolean r;
    r = consumeToken(b, ESCAPE_UNICODE);
    if (!r) r = consumeToken(b, ESCAPE_SPECIAL);
    return r;
  }

  /* ********************************************************** */
  // term (infix term | term)*
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = term(b, l + 1);
    r = r && expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (infix term | term)*
  private static boolean expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_1", c)) break;
    }
    return true;
  }

  // infix term | term
  private static boolean expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr_1_0_0(b, l + 1);
    if (!r) r = term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // infix term
  private static boolean expr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = infix(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier COLON field_rhs
  public static boolean field_mark(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_mark")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && field_rhs(b, l + 1);
    exit_section_(b, m, FIELD_MARK, r);
    return r;
  }

  /* ********************************************************** */
  // identifier | charset | string_literal
  public static boolean field_rhs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_rhs")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_RHS, "<field rhs>");
    r = identifier(b, l + 1);
    if (!r) r = charset(b, l + 1);
    if (!r) r = string_literal(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // [key (EQ|COLON)] cmd_value
  public static boolean fn_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_pair")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FN_PAIR, "<fn pair>");
    r = fn_pair_0(b, l + 1);
    r = r && cmd_value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [key (EQ|COLON)]
  private static boolean fn_pair_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_pair_0")) return false;
    fn_pair_0_0(b, l + 1);
    return true;
  }

  // key (EQ|COLON)
  private static boolean fn_pair_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_pair_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = key(b, l + 1);
    r = r && fn_pair_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EQ|COLON
  private static boolean fn_pair_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_pair_0_0_1")) return false;
    boolean r;
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // fn_pair
  public static boolean fn_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FN_STATEMENT, "<fn statement>");
    r = fn_pair(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // PARENTHESIS_L fn_statement* PARENTHESIS_R
  public static boolean function_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_args")) return false;
    if (!nextTokenIs(b, PARENTHESIS_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENTHESIS_L);
    r = r && function_args_1(b, l + 1);
    r = r && consumeToken(b, PARENTHESIS_R);
    exit_section_(b, m, FUNCTION_ARGS, r);
    return r;
  }

  // fn_statement*
  private static boolean function_args_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_args_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!fn_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_args_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // identifier function_args [cmd_block]
  public static boolean function_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && function_args(b, l + 1);
    r = r && function_call_2(b, l + 1);
    exit_section_(b, m, FUNCTION_CALL, r);
    return r;
  }

  // [cmd_block]
  private static boolean function_call_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_2")) return false;
    cmd_block(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SYMBOL
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYMBOL);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // BRACE_L [identifier (COMMA identifier)* [COMMA]] BRACE_R
  public static boolean import_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_body")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_L);
    r = r && import_body_1(b, l + 1);
    r = r && consumeToken(b, BRACE_R);
    exit_section_(b, m, IMPORT_BODY, r);
    return r;
  }

  // [identifier (COMMA identifier)* [COMMA]]
  private static boolean import_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_body_1")) return false;
    import_body_1_0(b, l + 1);
    return true;
  }

  // identifier (COMMA identifier)* [COMMA]
  private static boolean import_body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_body_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && import_body_1_0_1(b, l + 1);
    r = r && import_body_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA identifier)*
  private static boolean import_body_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_body_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!import_body_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "import_body_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA identifier
  private static boolean import_body_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_body_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [COMMA]
  private static boolean import_body_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_body_1_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // KW_IMPORT string_literal [import_body]
  public static boolean import_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_statement")) return false;
    if (!nextTokenIs(b, KW_IMPORT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_STATEMENT, null);
    r = consumeToken(b, KW_IMPORT);
    r = r && string_literal(b, l + 1);
    p = r; // pin = string_literal
    r = r && import_statement_2(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [import_body]
  private static boolean import_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_statement_2")) return false;
    import_body(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // CHOOSE | SOFT_CONNECT
  public static boolean infix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "infix")) return false;
    if (!nextTokenIs(b, "<infix>", CHOOSE, SOFT_CONNECT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INFIX, "<infix>");
    r = consumeToken(b, CHOOSE);
    if (!r) r = consumeToken(b, SOFT_CONNECT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // string_literal | key_symbol | INTEGER
  public static boolean key(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, KEY, "<key>");
    r = string_literal(b, l + 1);
    if (!r) r = key_symbol(b, l + 1);
    if (!r) r = consumeToken(b, INTEGER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SYMBOL
  public static boolean key_symbol(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_symbol")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYMBOL);
    exit_section_(b, m, KEY_SYMBOL, r);
    return r;
  }

  /* ********************************************************** */
  // value
  public static boolean macro_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "macro_arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, MACRO_ARG, "<macro arg>");
    r = value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // HASH identifier
  public static boolean macro_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "macro_call")) return false;
    if (!nextTokenIs(b, HASH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, HASH);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, MACRO_CALL, r);
    return r;
  }

  /* ********************************************************** */
  // (identifier !('('|'{'|ARROW|DOT|HYPHEN|COLON))*
  public static boolean modifiers(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "modifiers")) return false;
    Marker m = enter_section_(b, l, _NONE_, MODIFIERS, "<modifiers>");
    while (true) {
      int c = current_position_(b);
      if (!modifiers_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "modifiers", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // identifier !('('|'{'|ARROW|DOT|HYPHEN|COLON)
  private static boolean modifiers_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "modifiers_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && modifiers_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
